--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,5 +45,5 @@ jobs:
         run: terraform apply -auto-approve
 
       - name: Terraform Destroy
-        if: ${{ github.event.inputs.actions == 'destroy' }}
+        if: ${{ github.event.inputs.action == 'destroy' }}
         run: terraform destory -auto-approve
