--- a/.github/workflows/test-terraform.yml
+++ b/.github/workflows/test-terraform.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   terraform_deployment:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
